--- a/config/database.yml
+++ b/config/database.yml
@@ -4,14 +4,38 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
+# default: &default
+#   adapter: postgresql
+#   pool: 5
+#   timeout: 5000
+
+# development:
+#   <<: *default
+#   database: final_countdown
+
+  #heroku
+
 default: &default
   adapter: postgresql
-  pool: 5
-  timeout: 5000
+  encoding: unicode
+  # For details on connection pooling, see rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
   database: final_countdown
+
+test:
+  <<: *default
+  database: final_countdown_test
+
+production:
+  <<: *default
+  database: final_countdown_production
+  username: final_countdown
+  password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
